2002-01-23  Dick Porter  <dick@ximian.com>

	* Linux.cs: GetFileTime and SetFileTime need to be static

Tue Jan 22 22:50:29 CET 2002 Paolo Molaro <lupus@ximian.com>

	* Linux.cs: comment out call to Debug.Assert(): stuff from the System
	assembly cannot be used in corlib.

2001-12-11  Dick Porter  <dick@ximian.com>

	* Linux.cs: IO implemented with file handles with internal calls,
	rather than casting file descriptors for C library p/invokes.
	Implemented Get/Set Creation/LastAccess/LastWrite TimeFile
	functions.

Wed Nov 14 16:30:27 CET 2001 Paolo Molaro <lupus@ximian.com>

	* Linux.cs: a '/' is a valid char in a file path.

2001-11-10  Sean MacIsaac  <macisaac@ximian.com>

	* Linux.cs (GetCurrentDirectory): implemented